# nascraft-webui

./: .gitignore  README.md  diagnose.sh  package-lock.json  package.json  repair.sh  sign_apk.sh
public/: index.html
src/: App.css  App.js  index.js  setupProxy.js
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/plugins/photo/: Cargo.toml  build.rs  package.json
src-tauri/plugins/photo/android/: build.gradle.kts  settings.gradle
src-tauri/plugins/photo/android/src/main/: AndroidManifest.xml
src-tauri/plugins/photo/android/src/main/kotlin/: PhotoPlugin.kt
src-tauri/plugins/photo/guest-js/: index.js  index.ts
src-tauri/plugins/photo/ios/Sources/: PhotoPlugin.swift
src-tauri/plugins/photo/permissions/: default.toml  mobile.toml
src-tauri/plugins/photo/permissions/autogenerated/: reference.md
src-tauri/plugins/photo/permissions/autogenerated/commands/: checkAndRequestPermissions.toml  get_album_paths.toml  get_album_photos.toml  get_photo_thumbnail.toml  openAppSettings.toml  read_photo_data.toml
src-tauri/plugins/photo/permissions/schemas/: schema.json
src-tauri/plugins/photo/src/: lib.rs
src-tauri/src/: lib.rs
src/components/: Header.js  Navigation.js  UploadProgress.js  withSystemCheck.js
src/i18n/: i18n.js  messages.js
src/pages/: LoginForm.js  LogsPage.js  SystemInit.js  UploadForm.js  UploadedFiles.js  VideoList.js  Welcome.js
src/utils/: AlbumUploadManager.js  UploadStateMachine.js  UploadUtils.js  apiFetch.js  fileWatcher.js  systemCheck.js
