[package]
name = "tauri-plugin-photo"
build = "build.rs"
version = "2.2.0"
authors = ["You"]
description = "Plugin for accessing photo gallery on mobile platforms"
edition = "2021"
links = "tauri-plugin-photo"

[lib]
name = "tauri_plugin_photo"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
tauri = { version = "2.9.5", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
